--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main id="taskList">
+        <h1>To Do</h1>
+        <ul id="toDoList"></ul>
+        <h1>Done</h1>
+        <ul id="doneList"></ul>
+    </main>
 </body>
 </html>
