--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <script src="vendors/jquery.3.6.0.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="scripts/client.js"></script>
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <input type="text" placeholder="Task Name">
+        <button id="submit">Add Task</button>
+    </header>
     <main id="taskList">
         <h1>To Do</h1>
         <ul id="toDoList"></ul>
