insert task functioning

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <input type="text" placeholder="Task Name">
+        <input type="text" placeholder="Task Name" id="newTask">
         <button id="submit">Add Task</button>
     </header>
     <main id="taskList">
