--- a/server/public/index.html
+++ b/server/public/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <img src="taskm_clear.png" alt="Task Manger Logo" width="100%">
+    <img src="./images/taskm_clear.png" alt="Task Manger Logo" width="100%">
     <header class="container">
         <div class="row justify-content-center">
             <!-- <div class="col-6">
