more bootstrap alignments

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -25,7 +25,9 @@
 
 <body>
     <header class="container">
-        <img src="taskm_clear.png" alt="Task Manger Logo" id="logo" >
+        <div class="row">
+        <img class="col-md-3 offset-md-3" src="taskm_clear.png" alt="Task Manger Logo" id="logo" >
+      </div>
         <div class="row justify-content-center">
             <!-- <div class="col-6">
             <input type="text" placeholder="Task Name" id="newTask">
