--- a/server/public/index.html
+++ b/server/public/index.html
@@ -26,7 +26,7 @@
 <body>
     <header class="container">
         <div class="row">
-        <img class="col-md-3 offset-md-3" src="taskm_clear.png" alt="Task Manger Logo" id="logo" >
+        <img class="col-md-3 offset-md-3" src="./images/taskm_clear.png" alt="Task Manger Logo" id="logo" >
         </div>
         <div class="row justify-content-center">
             <!-- <div class="col-6">
